# rust-js-proto

./: Cargo.toml  README.md
benches/: native_benchmark.rs  quickjs_benchmark.rs  v8_benchmark.rs
js/: index.js
src/: main_bench.rs
