[package]
name = "rust-js-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
js-sandbox = "0.1.6"
mjs-sys = { version = "0.1", features = ["platform-nrf52"] }
quick-js = "0.4.1"
criterion = "0.3"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "quickjs_benchmark"
harness = false
